# sliding-puzzle

./: .gitignore  CMakeLists.txt  backend.h  frontend3d.c  words.txt
fonts/: www.dafontfree.net.url
models/: piece.blend  piece.blend1  piece.mtl
resources/models/: piece.blend
src/: CMakeLists.txt  Makefile  backend.h  frontend3d.c  main.c
src/backend/: CMakeLists.txt  backend.c  backend.h
